fixed styling issues on mobile

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -3,11 +3,11 @@
 	background-color: white;
 	z-index: 99;
 	bottom: 0;
-	width: 100%;
+	width: 100vw;
 	-webkit-box-shadow:0 2px 10px 0 rgba(0,0,0,0.40);
 	        box-shadow:0 2px 10px 0 rgba(0,0,0,0.40);
 	.menu {
-		width: 100%;
+		width: 100vw;
 		text-align: center;
 		margin: 0 auto;
 		display: -webkit-box;
